--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "strict": true,                                      /* Enable all strict type-checking options. */
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */,
     "noUncheckedIndexedAccess": true,
-    "noEmit": true
+    "noEmit": true,
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules"]
