--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "@types/react": "^18.2.28",
     "@types/react-dom": "^18.2.13",
     "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "recoil": "^0.7.7"
   }
 }
