--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "recoilens",
   "version": "1.0.1",
-  "description": "A custom state logger for Recoil",
+  "description": "The Recoilens provides a custom state logger for Recoil, a state management library for React. It allows you to track changes in a specific atom and display a message as a popup.",
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
