--- a/package.json
+++ b/package.json
@@ -1,14 +1,24 @@
 {
   "name": "recoilens",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "The Recoilens provides a custom state logger for Recoil, a state management library for React. It allows you to track changes in a specific atom and display a message as a popup",
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
-    "recoil",
+    "frontend",
+    "design",
+    "react",
+    "typescript",
+    "component",
+    "library",
     "state",
+    "management",
+    "recoil",
+    "devtools",
+    "chrome",
+    "debugger",
     "logger"
   ],
   "author": "Sait N Yalcin",
