--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "recoilens",
   "version": "1.0.3",
+  "homepage": "https://saitnyalcin.github.io/recoilens/",
   "description": "The Recoilens provides a custom state logger for Recoil, a state management library for React. It allows you to track changes in a specific atom and display a message as a popup",
   "main": "src/index.js",
   "scripts": {
